# Agent_RAG_template

./: .gitignore  INSTALLATION.md  README.md  config.yaml  pyproject.toml  server.py  setup_agent_rag.py  simple_mcp_test.py  test_mcp_client.py
docs/: README.md
rag/: __init__.py  chunker.py  config_loader.py  embedder.py  store.py  watcher.py
test/: test_rag.py
