# =============================================================================
# pyproject.toml — Agent_rag (RAG MCP Server)
# =============================================================================

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "agent-rag-mcp"
version         = "1.0.3"
description     = "RAG MCP server: ChromaDB + sentence-transformers, exposes ingest/search/list/delete tools."
readme          = "README.md"
requires-python = ">=3.10"
authors         = [{ name = "Tharindumendis" }]
keywords        = ["mcp", "fastmcp", "rag", "chromadb", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP server
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
    # Vector store
    "chromadb>=0.5.0",
    # Embeddings (local, no API key needed)
    "sentence-transformers>=3.0.0",
    # Config
    "pyyaml>=6.0",
    # Directory Watching
    "watchdog>=4.0.0",
]

[project.scripts]
agent-rag-mcp = "server:main"

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.hatch.build.targets.wheel.force-include]
"server.py"   = "server.py"
"config.yaml" = "config.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "rag/",
    "server.py",
    "config.yaml",
    "README.md",
    "pyproject.toml",
]
