# =============================================================================
# pyproject.toml — Agent_rag (RAG MCP Server)
# =============================================================================

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "agent-rag-mcp"
version         = "1.1.5"
description     = "RAG MCP server: ChromaDB + sentence-transformers, exposes ingest/search/list/delete tools."
readme          = "README.md"
requires-python = ">=3.10"
authors         = [{ name = "Tharindumendis" }]
keywords        = ["mcp", "fastmcp", "rag", "chromadb", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP server (core — always needed)
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
    # Vector store (chromadb works with both onnx and ollama embedders)
    "chromadb>=0.5.0",
    # Embeddings support (requests for ollama API)
    "requests>=2.30.0",
    # Config
    "pyyaml>=6.0",
    # Directory Watching
    "watchdog>=4.0.0",
]

[project.scripts]
agent-rag-mcp = "server:main"

[project.optional-dependencies]
# Use Ollama for embeddings (lightweight, remote, no GPU needed)
# Command: uv install agent-rag-mcp[ollama]
ollama = [
    # Optional: pre-install onnxruntime just in case user switches to local ONNX
    # Not required if using Ollama only
]

# Use local ONNX embeddings (faster than remote Ollama, but heavier)
# Command: uv install agent-rag-mcp[local]
local = [
    "onnxruntime>=1.24.0",
    # Note: chromadb's DefaultEmbeddingFunction uses ONNX internals — 
    # no torch or sentence-transformers needed
]

# Use sentence-transformers + torch for advanced fine-tuning (optional)
# Command: uv install agent-rag-mcp[gpu]
gpu = [
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",
]

# All extras combined
all = [
    "onnxruntime>=1.24.0",
    "torch>=2.0.0",
    "sentence-transformers>=3.0.0",
]

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.hatch.build.targets.wheel.force-include]
"server.py"   = "server.py"
"config.yaml" = "config.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "rag/",
    "server.py",
    "config.yaml",
    "README.md",
    "pyproject.toml",
]
